# controller/controller.go
@@ -170,17 +170,17 @@ func (ctrl *Controller) SetupRouter(
 		apiRoot.GET("/version", ctrl.Version)
 	}
 
-	files := apiRoot.Group("/files")
-	{
-		// files.POST("", ctrl.UploadFilesGin) // To delete
-		// files.POST("/", ctrl.UploadFilesGin)
-		// files.GET("/:id", ctrl.GetFileGin)
-		// files.HEAD("/:id", ctrl.GetFileInformation)
-		// files.PUT("/:id", ctrl.ReplaceFileGin)
-		files.DELETE("/:id", ctrl.DeleteFileGin)
-		// files.GET("/:id/presignedurl", ctrl.GetFilePresignedURLGin)
-		// files.GET("/:id/presignedurl/content", ctrl.GetFileWithPresignedURL)
-	}
+	// files := apiRoot.Group("/files")
+	// {
+	// 	files.POST("", ctrl.UploadFilesGin) // To delete
+	// 	files.POST("/", ctrl.UploadFilesGin)
+	// 	files.GET("/:id", ctrl.GetFileGin)
+	// 	files.HEAD("/:id", ctrl.GetFileInformation)
+	// 	files.PUT("/:id", ctrl.ReplaceFileGin)
+	// 	files.DELETE("/:id", ctrl.DeleteFileGin)
+	// 	files.GET("/:id/presignedurl", ctrl.GetFilePresignedURLGin)
+	// 	files.GET("/:id/presignedurl/content", ctrl.GetFileWithPresignedURL)
+	// }
 
 	ops := apiRoot.Group("/ops")
 	{
